Fix .wrap to match old .container class

--- a/assets/stylesheets/common/base/header.scss
+++ b/assets/stylesheets/common/base/header.scss
@@ -11,7 +11,11 @@
   height: 56px;
 
   .wrap {
-    max-width: 100%;
+    max-width: none;
+    margin-right: 10px;
+    margin-top: 0;
+    width: 100%;
+    padding: 0;
   }
   
   .header-links-wrapper {
